  (Léo Andrès, review by Alain Frisch)

- #8894: Added List.fold_left_map function combining map and fold.
  (Bernhard Schommer, review by Alain Frisch and github user @cfcs)

- #9237: `Format.pp_update_geometry ppf (fun geo -> {geo with ...})`
  for formatter geometry changes that are robust to new geometry fields.
  (Gabriel Scherer, review by Josh Berdine and ???)

### Other libraries:

- #9106: Register printer for Unix_error in win32unix, as in unix.
  (Christopher Zimmermann, review by David Allsopp)

- #9183: Preserve exception backtrace of exceptions raised by top-level phrases
  of dynlinked modules.
  (Nicolás Ojeda Bär, review by Xavier Clerc and Gabriel Scherer)

### Tools:

- #9299: ocamldep: do not process files during cli parsing. Fixes
  various broken cli behaviours.
  (Daniel Bünzli, review by XXX)

- #9276: objinfo: cm[x]a print extra C options, objects and dlls in
  the order given on the cli. Follow up to #4949.
  (Daniel Bünzli, review by Gabriel Scherer)

- #463: objinfo: better errors on object files coming
  from a different (older or newer), incompatible compiler version.
  (Gabriel Scherer, review by Gabriel Radanne and Damien Doligez)

- #9181: make objinfo work on Cygwin and look for the caml_plugin_header
  symbol in both the static and the dynamic symbol tables.
  (Sébastien Hinderer, review by Gabriel Scherer and David Allsopp)

* #9197: remove compatibility logic from #244 that was designed to
  synchronize toplevel printing margins with Format.std_formatter,
  but also resulted in unpredictable/fragile changes to formatter
  margins.
  Setting the margins on the desired formatters should now work.
  typically on `Format.std_formatter`.
  Note that there currently is no robust way to do this from the
  toplevel, as applications may redirect toplevel printing. In
  a compiler/toplevel driver, one should instead access
  `Location.formatter_for_warnings`; it is not currently exposed
  to the toplevel.